--- a/templates/tv.html
+++ b/templates/tv.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TV Screen Command Line</title>
+  <title>GenBox</title>
+  <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   <style>
     body {
       background-color: #e0ac69;
