--- a/templates/tv.html
+++ b/templates/tv.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
   <title>GenBox</title>
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   <style>
@@ -89,13 +89,13 @@
     }
 
     // Function to simulate fetching data from server
-      function fetchServerText() {
-        return new Promise((resolve) => {
-          setTimeout(() => {
-            getContent().then(commandLineText => resolve(commandLineText));
-          }, 1000); // Simulates delay
-        });
-      }
+    function fetchServerText() {
+      return new Promise((resolve) => {
+        setTimeout(() => {
+          getContent().then(commandLineText => resolve(commandLineText));
+        }, 1000); // Simulates delay
+      });
+    }
 
     // Fetch the command-line text and display it
     async function displayServerText() {
