--- a/templates/tv.html
+++ b/templates/tv.html
@@ -31,6 +31,7 @@
       height: 100vh;
       width: 100vw;
       margin: 0;
+      animation: fadeIn 2s ease-in-out; /* Apply fade-in animation */
     }
 
     #tv {
@@ -192,6 +193,16 @@
 
       to {
         transform: translateY(75%);
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
       }
     }
 
