--- a/templates/aiblog.html
+++ b/templates/aiblog.html
@@ -22,9 +22,9 @@
 
         iframe {
             width: 100%;
-            height: 80%;
+            height: 100%;
             border: none;
-            background-image: url('static/crumpled_paper.png');
+            /* background-image: url('static/crumpled_paper.png'); */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -106,7 +106,7 @@
     <!-- Iframe -->
     <iframe id="blogIframe" title="AI Blog"></iframe>
 
-    <div class="scrollable-paragraph">
+    <!-- <div class="scrollable-paragraph" hidden>
         <p><b>Disclaimer:</b>
             This project, is an experimental open-source initiative utilizing LangChain Agents and Azure OpenAI for
             content generation. The source code for this project is available at
@@ -126,8 +126,10 @@
             By accessing and using this project, you acknowledge that all generated content is speculative, fictional,
             and for research and experimental exploration of AI-driven predictive content generation.
         </p>
-    </div>
-
+    </div> -->
+    <footer style="position: fixed; bottom: 10px; left: 0; right: 0; color: #ffffff4c; padding: 10px; text-align: center;">
+        <p>Copyright (c) 2024 Abozar Alizadeh</p>
+    </footer> 
     <script>
         let currentDate = new Date();
         if (currentDate >= new Date("2025-01-25T00:00:00")) {
